[project]
name = "support-bank-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Tasneem Kurabadwala",email = "Tasneem.Kurabadwala@softwire.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "support_bank_python", from = "src"}]

[tool.poetry.scripts]
supportbank = "src.support_bank_python.supportbank:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
